# docker-homelab-manager

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-Dev  README.md  alembic.ini  devbox.json  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: ci.yml  publish-image.yml
docs/: database.md
migrations/: env.py
migrations/versions/: 2123d3770f00_new_remote_path_field_sftp_source.py  264a10d3ad32_new_source_table.py  27fb915c6d03_add_unkown_job_table.py  37c8a85d03af_inital_seed.py  4ca112e04efd_remove_succesful.py  5b64dc34699f_inital_seed.py  677098e97ac3_inital_seed.py  743a1262deff_db_refine.py  7c64154a5d29_new_error_tables.py  866892f8fecb_remove_old_error_and_success_fields.py  8ac20eaf169c_remove_cyclic_foreign_keys.py  94bef540a56e_added_backup_table.py  9724dd6f04cf_new_backup_status_field.py  993ffcfdbaa0_db_refine.py  b8b1e311a69a_db_refine.py  c5a3fa8f56c6_remove_error_tables.py  c68056707d86_backup_status_field.py
scripts/: scripts.py
src/: api.py  apschedule.py  celery.py  db.py  docker.py  main.py  models.py  schedule.py  ssh.py  worker.py
src/api/: Dockerfile.api  main.py
src/apschedule/: schedule.py  tasks.py
src/celery/: Dockerfile.celery-worker  worker.py
src/config/: log_config.yaml
src/routes/: api.py  html.py
src/routes/impl/: crypto.py  funcs.py  volumes.py
src/routes/impl/api/: responce.py
src/routes/impl/unknown/: loading_job.py
src/routes/impl/volumes/: backups.py  db.py  resored_backups.py  volumes.py
src/static/: site.css
src/static/js/: alpine-init.js
src/templates/: ??????.html  backup_rows.html  backup_schedule_rows.html  backup_volume_tab.html  backup_volumes_tab.html  create_backup_schedule.html  index.html  layout.html  notification.html  volume_rows.html
src/templates/tabs/backup_volumes/: backup_volume_tab.html
src/templates/tabs/backup_volumes/components/: backup_rows.html  create_backup_schedule.html
src/templates/tabs/restore_volumes/: restore_volume_tab.html
src/templates/tabs/restore_volumes/components/: backup_rows.html  restore_rows.html
src/templates/unknown/: loading.html  store_window.html
src/templates/unknown/components/: progress_bar.html
tests/: conftest.py  fixtures.py  test_api.py  test_apschedule_tasks.py  test_celery.py  test_docker.py  test_version.py
tests/api/: test_main.py
tests/apschedule/: test_task_backup.py  test_task_restore.py
tests/routes/: conftest.py  test_api.py  test_html.py
tests/routes/api/: test_create_sftp_backup_source.py  test_delete_sftp_backup_source.py  test_get_backups.py  test_get_sftp_backup_source.py  test_list_sftp_backup_source.py  test_restore_volumes.py
tests/routes/snapshots/test_html/test_backup_volume/: notification.html
tests/routes/snapshots/test_html/test_backup_volume_error_attached/: notification.html
tests/routes/snapshots/test_html/test_backup_volume_tab/: backup_volume_tab.html
tests/routes/snapshots/test_html/test_backup_volumes_tab/: index.html
tests/routes/snapshots/test_html/test_backups/: backup_rows.html
tests/routes/snapshots/test_html/test_backups_restore_tab/: backup_rows.html
tests/routes/snapshots/test_html/test_create_schedule/: notification.html
tests/routes/snapshots/test_html/test_list_restored_volumes/: restore_rows.html
tests/routes/snapshots/test_html/test_restore_volumes_tab/: index.html
tests/routes/snapshots/test_html/test_root/: index.html
tests/routes/snapshots/test_html/test_volumes/: volume_rows.html
